--- a/acceuil.html
+++ b/acceuil.html
@@ -1,50 +1,85 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agr-IoT - Accueil</title>
-    <link rel="stylesheet" href="Components/Project-1.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <style>
+        .custom-footer {
+            max-width: 500px;
+            margin: 0 auto;
+        }
+    </style>
 </head>
-<body>
-    <header>
-        <h1>Agr-IoT</h1>
-        <nav>
-            <ul>
-                <li><a href="acceuil.html">Accueil</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="actualités.html">Actualités</a></li>
-                <li class="dropdown">
-                    <a href="equipe.html">Équipe</a>
-                    <div class="dropdown-content">
-                        <a href="valeurs.html">Valeurs</a>
-                        <a href="histoire.html">Histoire</a>
-                        <a href="témoignages.html">Témoignages</a>
-                    </div>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="intro">
-            <h2>Bienvenue chez Agr-IoT</h2>
-            <p>Agr-IoT est une entreprise pionnière dans le domaine de l'agriculture intelligente ou "smart farming". Nous utilisons des technologies IoT avancées pour améliorer la productivité agricole, optimiser les ressources et soutenir une agriculture durable.</p>
-        </section>
 
-        <section class="content">
-            <div class="image-with-text">
-                <div class="text">
-                    <article> 
+<body>
+    <header class="bg-success text-white text-center py-3">
+        <h1>Agr-IoT</h1>
+    </header>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item mr-5"><a class="nav-link" href="acceuil.html">Accueil</a></li>
+                    <li class="nav-item mr-5"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item mr-5"><a class="nav-link" href="actualités.html">Actualités</a></li>
+                    <li class="nav-item dropdown mr-5">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Équipe
+                        </a>
+                        <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item " href="valeurs.html">Valeurs</a>
+                            <a class="dropdown-item " href="histoire.html">Histoire</a>
+                            <a class="dropdown-item " href="témoignages.html">Témoignages</a>
+                        </div>
+                    </li>
+                    <li class="nav-item mr-5"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <main class="container mt-2">
+        <div class="jumbotron text-center">
+            <h1 class="display-4">Bienvenue chez Agr-IoT</h1>
+            <p class="lead">Agr-IoT est une entreprise pionnière dans le domaine de l'agriculture intelligente ou "smart
+                farming". Nous utilisons des technologies IoT avancées pour améliorer la productivité agricole,
+                optimiser les ressources et soutenir une agriculture durable.</p>
+        </div>
+
+        <section class="content my-5">
+            <div class="row">
+                <div class="col-md-6">
                     <h3>Notre Mission</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                    </article>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                 </div>
-            <img src= "Components/Images/smart-farming.png" alt="Agriculture Intelligente" width="400">
+                <div class="col-md-6">
+                    <img src="Components/Images/smart-farming.png" class="img-fluid" alt="Agriculture Intelligente">
+                </div>
             </div>
         </section>
+        <div class="jumbotron text-center">
+            <h5>Découvrez nos services et solutions pour une agriculture plus efficace et durable.</h5>
+            <br><a class="btn btn-primary btn-lg" href="services.html" role="button">En savoir plus</a>
+        </div>
     </main>
-    <footer>
+
+    <footer class="bg-dark text-white text-center py-2" >
+
         <p>&copy; 2024 Agr-IoT. Tous droits réservés.</p>
+
     </footer>
 </body>
-</html>
+
