--- a/histoire.html
+++ b/histoire.html
@@ -1,30 +1,50 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Histoire - Agr-IoT</title>
-    <link rel="stylesheet" href="Components/Project-1.css">
+    <title>Agr-IoT - Accueil</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-    <header>
+    
+    <header class="bg-success text-white text-center py-3">
         <h1>Agr-IoT</h1>
-        <nav>
-            <ul>
-                <li><a href="acceuil.html">Accueil</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="actualités.html">Actualités</a></li>
-                <li class="dropdown">
-                    <a href="equipe.html">Équipe</a>
-                    <div class="dropdown-content">
-                        <a href="valeurs.html">Valeurs</a>
-                        <a href="histoire.html">Histoire</a>
-                        <a href="témoignages.html">Témoignages</a>
-                    </div>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
     </header>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item mr-5"><a class="nav-link" href="acceuil.html">Accueil</a></li>
+                    <li class="nav-item mr-5"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item mr-5"><a class="nav-link" href="actualités.html">Actualités</a></li>
+                    <li class="nav-item dropdown mr-5">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Équipe
+                        </a>
+                        <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="valeurs.html">Valeurs</a>
+                            <a class="dropdown-item" href="histoire.html">Histoire</a>
+                            <a class="dropdown-item" href="témoignages.html">Témoignages</a>
+                        </div>
+                    </li>
+                    <li class="nav-item mr-5"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <main>
         <section class="history">
             <article>
